crates/mlcg_builtin_macros/tests/ui/fail_unclassified_placeholder.rs
mod generated {
    mlcg_builtin_macros::include_manifest!("tests/unclassified_placeholder_manifest.toml");
}

fn main() {}
